--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "task2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run start -- --username=your_username"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +18,9 @@
     "url": "https://github.com/helly-15/node-task2/issues"
   },
   "homepage": "https://github.com/helly-15/node-task2#readme",
-  "keywords": []
+  "keywords": [],
+  "devDependencies": {
+    "nodemon": "^2.0.16",
+    "typescript": "^4.7.3"
+  }
 }
