--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "nodemon": "^2.0.16",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2"
   }
 }
