--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start:prod": "tsc && node dist/server.js",
-    "start:dev": "tsc && nodemon dist/server.js"
+    "start:dev": "tsc && nodemon dist/server.js",
+    "start:multi": "tsc && node dist/cluster.js"
   },
   "repository": {
     "type": "git",
